apps/base/games/pteropanel/pteropanel.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: games
  name: pteropanel
  labels:
    app: pteropanel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pteropanel
  template:
    metadata:
      labels:
        app: pteropanel
    spec:
      containers:
        - name: pteropanel
          image: ghcr.io/pterodactyl/panel:latest
          volumeMounts:
          - name: test
            mountPath: /app/var
      volumes:
      - name: test
        emptyDir: {}


          # args:
          # - --api.dashboard=true
---
apiVersion: v1
kind: Service
metadata:
  name: pteropanel
spec:
  # The targetPort entries are required as the Traefik container is listening on ports > 1024
  # so that the container can be run as a non-root user and they can bind to these ports.
  # Traefik is still accessed over 80 and 443 on the host, but the service routes the traffic
  # to ports 8080 and 8443 on the container.
  ports:
    - protocol: TCP
      name: web
      port: 80
      # targetPort: 8080
    - protocol: TCP
      name: websecure
      port: 443
      # targetPort: 8443
  selector:
    app: pteropanel
  # Set externalTrafficPolicy to Local so that all external traffic intended for
  # the Traefik pod goes directly to that local node. If the default of Cluster is
  # used instead then the client source IP address is lost, and may hop between nodes.
  # externalTrafficPolicy: Local
